2014-08-06  Tom Tromey  <tromey@redhat.com>

	* dwarf2read.c (write_psymbols): Update.
	* psympriv.h (struct partial_symbol) <pginfo>: Rename from
	'ginfo'.
	(PSYMBOL_VALUE, PSYMBOL_VALUE_ADDRESS, PSYMBOL_LANGUAGE)
	(PSYMBOL_SECTION, PSYMBOL_OBJ_SECTION, PSYMBOL_SET_LANGUAGE)
	(PSYMBOL_SET_NAMES, PSYMBOL_LINKAGE_NAME, PSYMBOL_DEMANGLED_NAME)
	(PSYMBOL_SEARCH_NAME, PSYMBOL_MATCHES_SEARCH_NAME): New macros.
	* psymtab.c (find_pc_sect_psymtab_closer, find_pc_sect_psymtab)
	(find_pc_sect_psymbol, fixup_psymbol_section)
	(match_partial_symbol, lookup_partial_symbol, relocate_psymtabs)
	(print_partial_symbols, recursively_search_psymtabs)
	(compare_psymbols, psymbol_hash, psymbol_compare)
	(add_psymbol_to_bcache, maintenance_check_psymtabs): Update.

2014-08-06  Tom Tromey  <tromey@redhat.com>

	* dbxread.c (start_psymtab): Update.
	(read_ofile_symtab): Remove comment.
	(cp_set_block_scope): Update comment.
	(process_one_symbol): Use PST_OFFSET.
	* dwarf2read.c (create_partial_symtab): Update.
	* elfread.c (elfstab_offset_sections): Compute new offset relative
	to the objfile's offset.
	* mdebugread.c (parse_symbol): Use PST_OFFSET.
	(parse_partial_symbols): Update.  Use PST_OFFSET.
	(new_psymtab): Don't initialize section_offsets field.
	* psympriv.h (struct partial_symtab) <section_offsets>: Update
	comment.
	(PST_OFFSET): New macro.
	(start_psymtab_common): Remove section_offsets argument.
	* psymtab.c (dump_psymtab): Use PST_OFFSET.
	(start_psymtab_common): Remove section_offsets argument.
	* xcoffread.c (xcoff_start_psymtab): Update.

2014-08-06  Tom Tromey  <tromey@redhat.com>

	* dbxread.c (end_psymtab): Remove dead code.

2014-08-06  Yao Qi  <yao@codesourcery.com>

	* amd64-linux-nat.c: Remove duplicated include
	"x86-linux-nat.h".
	* i386-linux-nat.c: Likewise.

2014-08-06  Yao Qi  <yao@codesourcery.com>

	* dwarf2read.c (dwarf_decode_lines_1): Replace "Special
	operand" with "Special opcode" in comments.

2014-08-05  Gary Benson  <gbenson@redhat.com>
